--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,20 +12,28 @@ authors = [
 dependencies = [
     "fastapi>=0.110",
     "uvicorn[standard]>=0.27",
-
     "langchain>=0.1",
     "langgraph>=0.0.30",
     "openai>=1.12",
-
     "weaviate-client>=4.5",
     "rank-bm25>=0.2",
-
     "langfuse>=2.20",
     "arize-phoenix>=4.0",
-
+    "protobuf>=4.25,<5",
     "pydantic>=2.6",
     "python-dotenv>=1.0",
     "httpx>=0.27",
+    "langchain-text-splitters>=1.1.0",
+    "prometheus-client>=0.20",
+    "streamlit>=1.32",
+    "pypdf>=4.0",
+    "pytesseract>=0.3.10",
+    "pdf2image>=1.17.0",
+    "Pillow>=10.0",
+    "python-docx>=1.1.2",
+    "openpyxl>=3.1.5",
+    "python-pptx>=0.6.23",
+    "redis>=5.0",
 ]
 
 [project.optional-dependencies]
@@ -36,10 +44,12 @@ dev = [
     "black>=24.2",
 ]
 
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [tool.ruff]
 line-length = 88
 target-version = "py310"
-
 select = ["E", "F", "I", "B", "UP"]
 ignore = ["E501"]
 
