--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,12 @@ dependencies = [
     "langchain-text-splitters>=1.1.0",
     "prometheus-client>=0.20",
     "streamlit>=1.32",
+    "email-validator>=2.1",
     "pypdf>=4.0",
     "pytesseract>=0.3.10",
     "pdf2image>=1.17.0",
     "Pillow>=10.0",
+    "python-multipart>=0.0.22",
     "python-docx>=1.1.2",
     "openpyxl>=3.1.5",
     "python-pptx>=0.6.23",
