--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -20,4 +20,4 @@ RUN pip install --no-cache-dir --upgrade pip \
 
 EXPOSE 8000
 
-CMD ["uvicorn", "enterprise_rag_system.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "rag_system.main:app", "--host", "0.0.0.0", "--port", "8000"]
