--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -12,7 +12,7 @@ COPY streamlit_app.py ./
 
 RUN pip install --no-cache-dir --upgrade pip \
     && pip install --no-cache-dir uv \
-    && uv sync --frozen --no-dev --system
+    && uv sync --frozen --no-dev
 
 EXPOSE 8501
 
