--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -16,4 +16,4 @@ RUN pip install --no-cache-dir --upgrade pip \
 
 EXPOSE 8501
 
-CMD ["streamlit", "run", "streamlit_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["sh", "-c", "streamlit run streamlit_app.py --server.port=${PORT:-8501} --server.address=0.0.0.0"]
