Replace Weaviate with SQLite + FAISS

--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,9 @@
 # OpenAI API key (required for embeddings & generation)
 OPENAI_API_KEY=
 
-# Optional service host overrides
-# e.g., localhost:8080 for weaviate
-WEAVIATE_URL=http://localhost:8080
-WEAVIATE_GRPC_PORT=50051
-# WEAVIATE_GRPC_HOST=localhost
-# WEAVIATE_GRPC_SECURE=false
+# Local storage paths (SQLite + FAISS)
+RAG_DB_PATH=data/rag.db
+RAG_INDEX_PATH=data/faiss.index
 
 # Redis (rate limiting)
 REDIS_URL=redis://localhost:6379/0
