--- a/render.yaml
+++ b/render.yaml
@@ -1,26 +1,5 @@
 services:
   - type: web
-    name: weaviate
-    runtime: image
-    region: frankfurt
-    image:
-      url: semitechnologies/weaviate:1.27.0
-    plan: free
-    envVars:
-      - key: QUERY_DEFAULTS_LIMIT
-        value: "25"
-      - key: AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED
-        value: "true"
-      - key: PERSISTENCE_DATA_PATH
-        value: /var/lib/weaviate
-      - key: DEFAULT_VECTORIZER_MODULE
-        value: none
-      - key: ENABLE_MODULES
-        value: ""
-      - key: PORT
-        value: "8080"
-
-  - type: web
     name: rag-api
     runtime: docker
     region: frankfurt
@@ -30,14 +9,10 @@ services:
     envVars:
       - key: OPENAI_API_KEY
         sync: false
-      - key: WEAVIATE_URL
-        value: http://weaviate:8080
-      - key: WEAVIATE_GRPC_HOST
-        value: weaviate
-      - key: WEAVIATE_GRPC_PORT
-        value: "50051"
-      - key: WEAVIATE_GRPC_SECURE
-        value: "false"
+      - key: RAG_DB_PATH
+        value: data/rag.db
+      - key: RAG_INDEX_PATH
+        value: data/faiss.index
       - key: APP_ENV
         value: production
 
