--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -3,7 +3,7 @@ FROM python:3.12-slim
 WORKDIR /app
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends tesseract-ocr poppler-utils \
+    && apt-get install -y --no-install-recommends tesseract-ocr poppler-utils libgomp1 \
     && rm -rf /var/lib/apt/lists/*
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
