--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,9 @@ dependencies = [
     "langchain>=0.1",
     "langgraph>=0.0.30",
     "openai>=1.12",
-    "weaviate-client>=4.5",
+    "faiss-cpu>=1.8.0",
     "rank-bm25>=0.2",
     "langfuse>=2.20",
-    "protobuf>=4.25,<5",
     "pydantic>=2.6",
     "python-dotenv>=1.0",
     "httpx>=0.27",
