Remove disk from Render blueprint

--- a/render.yaml
+++ b/render.yaml
@@ -6,17 +6,13 @@ services:
     dockerfilePath: Dockerfile.api
     plan: free
     healthCheckPath: /health
-    disk:
-      name: rag-data
-      mountPath: /var/data
-      sizeGB: 1
     envVars:
       - key: OPENAI_API_KEY
         sync: false
       - key: RAG_DB_PATH
-        value: /var/data/rag.db
+        value: data/rag.db
       - key: RAG_INDEX_PATH
-        value: /var/data/faiss.index
+        value: data/faiss.index
       - key: APP_ENV
         value: production
 
