Add agentic feature toggles to env and Render

--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,12 @@ REDIS_URL=redis://localhost:6379/0
 # Upload limits
 MAX_UPLOAD_MB=10
 
+# Agentic toggles
+ENABLE_TOOL_ROUTER=true
+ENABLE_FOLLOWUPS=true
+ENABLE_PLANNING=false
+ENABLE_DOC_ACTIONS=true
+
 # Optional credentials / settings
 # e.g., Langfuse API keys and host (if using hosted service)
 LANGFUSE_PUBLIC_KEY=
